@@ -106,6 +106,8 @@ int input_tokenizer (const u8 *input_buf, const int input_len, hc_token_t *token
 
 int extract_dynamicx_hash (const u8 *input_buf, const int input_len, u8 **output_buf, int *output_len);
 
+int get_current_arch();
+
 #if defined (__APPLE__)
 bool is_apple_silicon (void);
 #endif
